--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Каталог11 іграшок | VNTU-Toy</title>
+    <title>Каталог11 ааіграшок | VNTU-Toy</title>
     <link rel="stylesheet" href="css/style.css"> <!-- Підключення CSS -->
 </head>
 <body>
