--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Каталог11 ааіграшок | VNTU-Toy</title>
+    <title>Каталог іграшок | VNTU-Toy</title>
     <link rel="stylesheet" href="css/style.css"> <!-- Підключення CSS -->
 </head>
 <body>
@@ -63,26 +63,6 @@
             </main>
         </div>
     </div>
-
-    <div id="purchase-modal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <h2>Підтвердження покупки</h2>
-            <form id="purchase-form">
-                <label for="name">Ваше ім'я:</label>
-                <input type="text" id="name" required>
-
-                <label for="email">Електронна пошта:</label>
-                <input type="email" id="email" required>
-
-                <label for="address">Адреса доставки:</label>
-                <textarea id="address" required></textarea>
-
-                <button type="button" onclick="confirmBuy()">Підтвердити покупку</button>
-            </form>
-        </div>
-    </div>
-
 
     <script src="js/app.js"></script>
 
