--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
     <header>
         <h1>VNTU-Toy</h1>
         <nav>
-            <a class="nav-link" href="index.html">На головну</a>
+            <a class="nav-link" href="../index.html">На головну</a>
             <a class="nav-link" href="catalog.html">Каталог товарів</a>
             <a class="nav-link" href="about.html">Про нас</a>
             <a class="nav-link" href="delivery.html">Умови доставки</a>
