--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин іграшок VNTU-Toy</title>
-    <link rel="stylesheet" href="/css/style.css"> <!-- Підключення CSS -->
+    <link rel="stylesheet" href="../css/style.css"> <!-- Підключення CSS -->
 </head>
 <body>
     <header>
         <h1>VNTU-Toy</h1>
         <nav>
             <a class="nav-link" href="index.html">На головну</a>
-            <a class="nav-link" href="catalog.html">Каталог товарів</a>
-            <a class="nav-link" href="about.html">Про нас</a>
-            <a class="nav-link" href="delivery.html">Умови доставки</a>
+            <a class="nav-link" href="pages/catalog.html">Каталог товарів</a>
+            <a class="nav-link" href="pages/about.html">Про нас</a>
+            <a class="nav-link" href="pages/delivery.html">Умови доставки</a>
         </nav>
     </header>
 
