--- a/pages/404.html
+++ b/pages/404.html
@@ -96,7 +96,7 @@
 <div class="container">
     <h1>404</h1>
     <p>Oops! The page you're looking for doesn't exist.</p>
-    <a href="index.html" class="button">Go Back Home</a>
+    <a href="../index.html" class="button">Go Back Home</a>
 </div>
 
 <div class="stars">
