--- a/index.html
+++ b/index.html
@@ -3,43 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Магазин іграшок VNTU-Toy</title>
-    <link rel="stylesheet" href="../css/style.css"> <!-- Підключення CSS -->
+    <title>АДЖАХ ЖАРТИ</title>
+    <link rel="stylesheet" href="css/style.css"> <!-- Підключення CSS -->
 </head>
 <body>
     <header>
-        <h1>VNTU-Toy</h1>
-        <nav>
-            <a class="nav-link" href="index.html">На головну</a>
-            <a class="nav-link" href="pages/catalog.html">Каталог товарів</a>
-            <a class="nav-link" href="pages/about.html">Про нас</a>
-            <a class="nav-link" href="pages/delivery.html">Умови доставки</a>
-        </nav>
+        <h1>VNTU University</h1>
     </header>
 
     <main>
         <div class="index-title">
-            <h1>Про магазин VNTU-Toy</h1>
-        </div>
+            <h1>Жарти від аджаха</h1>
+            <div class="joke-box">
+                <h3>Отримати жарт</h3>
+                <button class="joke-button" onclick="loadJoke()">Показати жарт</button>
+                <p id="joke">Тут з’явится жарт.</p>
+            </div>
 
-        <div class="index-text">
-            <p>
-                Ласкаво просимо до VNTU-Toy – інтернет-магазину іграшок, який спеціалізується на продажу високоякісних та захоплюючих іграшок для дітей різного віку. Ми прагнемо дарувати радість та розвиток через іграшки, які сприяють творчому та інтелектуальному розвитку дитини.
-            </p>
-            <p>
-                У нашому каталозі ви знайдете широкий вибір товарів – від класичних іграшок, таких як м’які іграшки, до сучасних конструкторів та роботизованих іграшок. Кожна іграшка проходить ретельну перевірку якості, щоб гарантувати безпеку ваших дітей.
-            </p>
-            <p>
-                Завітайте до VNTU-Toy і дозвольте нам стати частиною незабутніх моментів у житті ваших дітей. Ми прагнемо зробити ваші покупки зручними та приємними, надаючи швидку доставку та високий рівень обслуговування.
-            </p>
-            <p>
-                Ми співпрацюємо лише з надійними виробниками, що дозволяє нам пропонувати нашим клієнтам найкращі ціни та гарантію якості на всі товари. Наші консультанти завжди готові допомогти з вибором іграшки, яка найкраще підходить для вашої дитини.
-            </p>
         </div>
     </main>
+
+    <script>
+        function loadJoke() {
+            const xhttp = new XMLHttpRequest();
+
+            xhttp.onreadystatechange = function () {
+                if (this.readyState === 4 && this.status === 200) {
+                    const jokes = this.responseText.split("\n");
+                    const randomJoke = jokes[Math.floor(Math.random() * jokes.length)];
+                    document.getElementById("joke").innerText = randomJoke;
+                }
+            };
+
+            xhttp.open("GET", "jokes.txt", true);
+            xhttp.send();
+        }
+    </script>
 
     <footer>
         &copy; 2024 VNTU-Toy. Всі права захищені.
     </footer>
 </body>
+
+
 </html>
