--- a/index.html
+++ b/index.html
@@ -23,27 +23,10 @@
         </div>
     </main>
 
-    <script>
-        function loadJoke() {
-            const xhttp = new XMLHttpRequest();
-
-            xhttp.onreadystatechange = function () {
-                if (this.readyState === 4 && this.status === 200) {
-                    const jokes = this.responseText.split("\n");
-                    const randomJoke = jokes[Math.floor(Math.random() * jokes.length)];
-                    document.getElementById("joke").innerText = randomJoke;
-                }
-            };
-
-            xhttp.open("GET", "jokes.txt", true);
-            xhttp.send();
-        }
-    </script>
+    <script src="js/app.js"></script>
 
     <footer>
         &copy; 2024 VNTU-Toy. Всі права захищені.
     </footer>
 </body>
-
-
 </html>
